--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,15 +19,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Helpapp">
-        <activity android:name=".MainActivity"/>
-        <activity android:name=".HomeActivity">
+        android:theme="@style/Theme.Helpapp"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".LoginActivity">
+        </activity>
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".HomeActivity"/>
     </application>
 
 </manifest>
