finish picture function-- 사진 촬영 mqtt 전송 완료

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
 
             </meta-data>
         </provider>
+        <service android:name="org.eclipse.paho.android.service.MqttService" />
     </application>
 
 </manifest>
