--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -29,18 +29,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Helpapp"
         android:usesCleartextTraffic="true">
-        <activity android:name=".location"></activity>
-        <activity android:name=".Product" />
         <activity android:name=".LoginActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
-        <activity android:name=".HomeActivity" >
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-        </activity>
+        <activity android:name=".HomeActivity" />
+        <activity android:name=".location"/>
+        <activity android:name=".Product" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
