--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
         <activity android:name=".HomeActivity" />
         <activity android:name=".location"/>
         <activity android:name=".Product" />
+        <activity android:name=".RegisterActivity"/>
 
         <provider
             android:name="androidx.core.content.FileProvider"
